--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -122,9 +122,9 @@
    "source": [
     "To learn more how to build and manipulate these expressions, please look\n",
     "at the documentation page of\n",
-    "[FermionicOperator](https://www.qrisp.eu/reference/Operators/FermionicOperator.html). For instance, the\n",
+    "[FermionicOperator](/reference/Operators/FermionicOperator.html). For instance, the\n",
     "hermitian conjugate can be computed using the\n",
-    "[.dagger](https://www.qrisp.eu/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.dagger.html#qrisp.operators.fermionic.FermionicOperator.dagger) method."
+    "[.dagger](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.dagger.html#qrisp.operators.fermionic.FermionicOperator.dagger) method."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "source": [
     "To apply the Pauli exclusion principle but also other anti-commutation\n",
     "laws for simplifaction, you can call the\n",
-    "[.reduce](https://www.qrisp.eu/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.reduce.html#qrisp.operators.fermionic.FermionicOperator.reduce) method."
+    "[.reduce](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.reduce.html#qrisp.operators.fermionic.FermionicOperator.reduce) method."
    ]
   },
   {
@@ -222,54 +222,15 @@
    "id": "c56ea0f2",
    "metadata": {},
    "source": [
-    "This gives us an instance of the [QubitOperator](https://www.qrisp.eu/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator)\n",
+    "This gives us an instance of the [QubitOperator](/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator)\n",
     "class. What is the difference to a\n",
-    "[FermionicOperator](https://www.qrisp.eu/reference/Operators/FermionicOperator.html)? While FermionicOperators\n",
+    "[FermionicOperator](/reference/Operators/FermionicOperator.html)? While FermionicOperators\n",
     "model the more abstract fermion space, qubit operators represent\n",
     "operators on the qubit space $(\\mathbb{C}^2)^{\\otimes n}$ and can be\n",
     "simulated and evaluated efficiently using a quantum computer. In\n",
     "particular, QubitOperators can represent tensor products of the\n",
     "following operators $X,Y,Z,A,C,P^0,P^1,I$. Make sure to read the\n",
-    "[documentation](https://www.qrisp.eu/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator) to learn about their definition!\n",
-    "\n",
-    "### Dynamics\n",
-    "\n",
-    "Both boson and fermion systems evolve under the Schrödinger equation:\n",
-    "\n",
-    "$$i \\hbar \\frac{d}{dt}\\ket{\\phi} = H \\ket{\\phi}$$\n",
-    "\n",
-    "Where \\$H\\$ is a hermitian operator called Hamiltonian. *Hamiltonian\n",
-    "simulation* is the procedure of mimicing the dynamics of a physical\n",
-    "system described by a Hamiltonian $H$ using a quantum computer. In\n",
-    "other words: creating the state $\\ket{\\phi, t} = \\text{exp}(iHt)\\ket{\\phi,\n",
-    "0}$ artificially to evaluate some of its properties.\n",
-    "\n",
-    "For bosonic systems, the Hamiltonian can only be a linear combination of\n",
-    "products of the bosonic ladder operators. The equivalent holds for\n",
-    "fermionic systems.\n",
-    "\n",
-    "$$H = \\sum_{n=0}^{\\infty} \\sum_{i_1, \\ldots, i_n} \\sum_{j_1, \\ldots, j_n} h_{i_1 \\ldots i_n, j_1 \\ldots j_n} a_{i_1}^{\\dagger} \\ldots a_{i_n}^{\\dagger} a_{j_1} \\ldots a_{j_n}$$\n",
-    "\n",
-    "Where all $h \\in \\mathbb{R}$. An example Hamiltonian could therefore\n",
-    "look like this\n",
-    "\n",
-    "$$H = h_{01}(a_0a^\\dagger_1 + a_1a^\\dagger_0) + h_{00}a_0a^\\dagger_0$$\n",
-    "\n",
-    "The particular values of the coefficients (like $h_{01}$ and\n",
-    "$h_{00}$) are determined by the specifics of the system. For many\n",
-    "systems of interest these numbers involve the computation of some\n",
-    "integrals - a task that can be efficiently performed on the classical\n",
-    "computer.\n",
-    "\n",
-    "# Loading molecular data into Qrisp\n",
-    "\n",
-    "If you don't feel like solving integrals right now, we've got you\n",
-    "covered! Qrisp has a convenient interface to\n",
-    "[PySCF](https://pyscf.org/), which loads the molecular data directly as\n",
-    "[FermionicOperator](https://www.qrisp.eu/reference/Operators/FermionicOperator.html). For that you need PySCF\n",
-    "installed (`pip install pyscf`). If you're on Windows you might need to\n",
-    "do some [WSL\n",
-    "gymnastics](https://harshityadav95.medium.com/jupyter-notebook-in-windows-subsystem-for-linux-wsl-8b46fdf0a536)."
+    "[documentation](/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator) to learn about their definition!"
    ]
   },
   {
@@ -300,8 +261,8 @@
    "metadata": {},
    "source": [
     "This snippet uses the\n",
-    "[.from_pyscf](https://www.qrisp.eu/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.from_pyscf.html#qrisp.operators.fermionic.FermionicOperator.from_pyscf)\n",
-    "method to load the [FermionicOperator](https://www.qrisp.eu/reference/Operators/FermionicOperator.html)\n",
+    "[.from_pyscf](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.from_pyscf.html#qrisp.operators.fermionic.FermionicOperator.from_pyscf)\n",
+    "method to load the [FermionicOperator](/reference/Operators/FermionicOperator.html)\n",
     "representing the orbitals of the Dihydrogen molecule \\$H_2\\$. Or to be\n",
     "more precise, two hydrogen nuclei seperated by \\$0.74\\$ Angstrom. We\n",
     "take a look at the ladder operators:"
@@ -342,9 +303,9 @@
     "# Performing Hamiltonian simulation\n",
     "\n",
     "To perform Hamiltonian simulation, we use the\n",
-    "[.trotterization](https://www.qrisp.eu/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.trotterization.html#qrisp.operators.fermionic.FermionicOperator.trotterization)\n",
+    "[.trotterization](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.trotterization.html#qrisp.operators.fermionic.FermionicOperator.trotterization)\n",
     "method, which gives us a Python function that performs a simulation of\n",
-    "the Hamiltonian on a [QuantumVariable](https://www.qrisp.eu/reference/Core/QuantumVariable.html#qrisp.QuantumVariable)."
+    "the Hamiltonian on a [QuantumVariable](/reference/Quantum%20Types/QuantumVariable.html)."
    ]
   },
   {
@@ -439,7 +400,7 @@
     "state to a 0 contribution. Its eigenvalues therefore indicate the number\n",
     "of electrons in the system. To evaluate the expectation value \\$\\bra{\\phi}\n",
     "N \\ket{\\phi}\\$, we call the\n",
-    "[.expectation_value](https://www.qrisp.eu/reference/Operators/generated/qrisp.operators.qubit.QubitOperator.expectation_value.html#qrisp.operators.qubit.QubitOperator.expectation_value)\n",
+    "[.expectation_value](/reference/Operators/generated/qrisp.operators.qubit.QubitOperator.expectation_value.html#qrisp.operators.qubit.QubitOperator.expectation_value)\n",
     "method."
    ]
   },
@@ -501,7 +462,7 @@
     "This concludes our little tutorial on Hamiltonian simulation. We hope\n",
     "you could learn something and feel motivated to explore more systems and\n",
     "techniques! Make sure to also check out the\n",
-    "[MolecularPotentialEnergyCurve](https://www.qrisp.eu/reference/Examples/MolecularPotentialEnergyCurve.html)\n",
+    "[MolecularPotentialEnergyCurve](/reference/Examples/MolecularPotentialEnergyCurve.html)\n",
     "example to learn how to compute the ground state for both types of\n",
     "operators!\n",
     "\n",
