--- a/documentation/source/general/tutorial/QIROtutorial.ipynb
+++ b/documentation/source/general/tutorial/QIROtutorial.ipynb
@@ -295,7 +295,7 @@
    "source": [
     "## Code execution\n",
     "\n",
-    "We start off by defining the graph of our problem, as well as the [QuantumVariable](../../general/quantum_variable.rst) to run our instance on:"
+    "We start off by defining the graph of our problem, as well as the [QuantumVariable](/reference/Quantum%20Types/QuantumVariable.html) to run our instance on:"
    ]
   },
   {
