--- a/documentation/source/general/tutorial/Shor.ipynb
+++ b/documentation/source/general/tutorial/Shor.ipynb
@@ -118,7 +118,7 @@
    "id": "6e50a36b",
    "metadata": {},
    "source": [
-    "The central concept of our implementation is the QuantumModulus class. This quantum type can be used to represent and process elements of a [Quotient Ring](https://en.wikipedia.org/wiki/Quotient_ring), which is basically just a fancy wording for \"numbers that operate under modular arithmetic\"."
+    "The central concept of our implementation is the [QuantumModulus](/reference/Quantum%20Types/QuantumModulus.html) class. This quantum type can be used to represent and process elements of a [Quotient Ring](https://en.wikipedia.org/wiki/Quotient_ring), which is basically just a fancy wording for \"numbers that operate under modular arithmetic\"."
    ]
   },
   {
@@ -139,7 +139,7 @@
    "id": "49022854",
    "metadata": {},
    "source": [
-    "This snippet creates such a QuantumVariable with modulus $N = 13$. Subsequently we encode the value 8. The defining feature of this type is the fact that arithmetic is always modular."
+    "This snippet creates such a [QuantumVariable](/reference/Quantum%20Types/Quantum%20Variable.html) with modulus $N = 13$. Subsequently we encode the value 8. The defining feature of this type is the fact that arithmetic is always modular."
    ]
   },
   {
@@ -203,7 +203,7 @@
    "source": [
     "As you can see under the hood, there is a lot of complexity, however due to systematic development and testing, a lot of it can be hidden from the user. Feel free to try out the in-place multiplication `*=`!\n",
     "\n",
-    "Using the QuantumModulus class allows us to implement Shor's algorithm within a few lines of code! For a simple example, let us factor $N = 99$ using $a = 10$."
+    "Using the [QuantumModulus](/reference/Quantum%20Types/QuantumModulus.html) class allows us to implement Shor's algorithm within a few lines of code! For a simple example, let us factor $N = 99$ using $a = 10$."
    ]
   },
   {
@@ -255,7 +255,7 @@
    "id": "5e9faa83",
    "metadata": {},
    "source": [
-    "Note the `exponent` keyword of the QuantumFloat constructor. It indicates that this QuantumFloat can represent numbers up to the precision $2^{-(2n+1)}$. After construction, we apply a Hadamard gate to each qubit as is customary in quantum phase estimation.\n",
+    "Note the `exponent` keyword of the [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html) constructor. It indicates that this QuantumFloat can represent numbers up to the precision $2^{-(2n+1)}$. After construction, we apply a Hadamard gate to each qubit as is customary in quantum phase estimation.\n",
     "\n",
     "We can now code the main loop:"
    ]
@@ -279,7 +279,7 @@
    "id": "efd80088",
    "metadata": {},
    "source": [
-    "Note that we have $x=a^{2^i}$ at the i-th iteration. Such a procedure is called repeated squaring and reduces the classical resources for the computation of $x$ in each iteration.\n",
+    "Note that we have $x=a^{2^i}$ at the i-th iteration. Such a procedure is called repeated squaring and reduces the classical resources for the computation of $x$ in each iteration. We use the [control](/reference/Core/Environment%20Stack.html#controlenvironment) environment to make the operation conditional on the state of a qubit.\n",
     "\n",
     "Finally, we conclude the phase estimation with the inverse quantum Fourier transformation and perform a measurement."
    ]
@@ -405,7 +405,7 @@
    "source": [
     "Aaaaand we are done! ⏲️\n",
     "\n",
-    "To highlight once more how much Qrisp simplifies the construction, we summarize the code of the quantum subroutine in a single function:"
+    "To highlight once more how much Qrisp simplifies the construction, we summarize the code of the quantum subroutine in a single function. The function uses [QuantumModulus](/reference/Quantum%20Types/QuantumModulus.html), [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html), [control](/reference/Core/Environment%20Stack.html#controlenvironment) environment, and [QFT](/reference/Miscellaneous%20Functions/QFT.html) to implement the algorithm:"
    ]
   },
   {
@@ -435,7 +435,7 @@
    "source": [
     "11 lines - feel free to compare with other implementations!\n",
     "\n",
-    "To learn how to compile this algorithm optimized for fault-tolerant backends and deploy an exponentially faster adder, make sure to check out the next tutorial!"
+    "To learn how to compile this algorithm optimized for fault-tolerant backends and deploy an exponentially faster adder, make sure to check out the [next tutorial](/reference/general/tutorial/FT_compilation.html)!"
    ]
   }
  ],
