--- a/documentation/source/general/tutorial/tutorial.ipynb
+++ b/documentation/source/general/tutorial/tutorial.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## Creating a QuantumVariable\n",
     "\n",
-    "The central building block of Qrisp algorithms is the QuantumVariable. A QuantumVariable hides the qubit management from the user, enables human readable in- and outputs, strong typing via class inheritance, infix arithmetic syntax and much more. Creating a QuantumVariable is simple:"
+    "The central building block of Qrisp algorithms is the [QuantumVariable](/reference/Quantum%20Types/Quantum%20Variable.html). A QuantumVariable hides the qubit management from the user, enables human readable in- and outputs, strong typing via class inheritance, infix arithmetic syntax and much more. Creating a QuantumVariable is simple:"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "\n",
     "In this case, the qubits are not ready to use for other purposes as they still are in a non-trivial state. If `qv` is entangled to other qubits, a simple reset would result in a non-unitary collapse of superposition. We would need to perform a procedure which is commonly called uncomputation.\n",
     "\n",
-    "QuantumVariables can be thought of as the abstract parent class of more special types. One example is the QuantumChar:"
+    "QuantumVariables can be thought of as the abstract parent class of more special types. One example is the [QuantumChar](/reference/Quantum%20Types/QuantumChar.html):"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "id": "6afcee6a",
    "metadata": {},
    "source": [
-    "It is also possible to run Qrisp code directly on IBM Quantum hardware using a `QiskitBackend`, on an IQM Quantum Computer using `IQMBackend` or on an AQT Quantum Computer using `AQTBackend`."
+    "It is also possible to run Qrisp code directly on IBM Quantum hardware using a [QiskitBackend](/reference/Interface/QiskitBackend.html), on an IQM Quantum Computer using [IQMBackend](/reference/Interface/IQMBackend.html) or on an AQT Quantum Computer using [AQTBackend](/reference/Interface/AQTBackend.html)."
    ]
   },
   {
@@ -412,7 +412,7 @@
    "id": "f9d247f0",
    "metadata": {},
    "source": [
-    "This oracle receives a QuantumFloat `qf` and evaluates the square. Subsequently it determines whether the result is equal to 0.25, which returns the QuantumBool `temp_qbool`. Finally, we perform a Z gate on `temp_qbool`. Note the `auto_uncompute` decorator, which automatically uncomputes all temporary values of this function (i.e. the result of the multiplication and `temp_qbool`). \n",
+    "This oracle receives a [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html) `qf` and evaluates the square. Subsequently it determines whether the result is equal to 0.25, which returns the [QuantumBool](/reference/Quantum%20Types/QuantumBool.html) `temp_qbool`. Finally, we perform a Z gate on `temp_qbool`. Note the [`auto_uncompute`](/reference/Miscellaneous/auto_uncompute.html) decorator, which automatically uncomputes all temporary values of this function (i.e. the result of the multiplication and `temp_qbool`). \n",
     "\n",
     "To inspect the circuit, we create a QuantumFloat, evaluate the oracle and call `print` on the `.qs` attribute:"
    ]
@@ -557,7 +557,7 @@
    "id": "34ebbe93",
    "metadata": {},
    "source": [
-    "First we create the QuantumFloat which will contain the solution. Note that the QuantumFloat constructor creates unsigned floats by default. We determine the number of iterations according to the formula given [here](https://arxiv.org/abs/quant-ph/9909040), taking into consideration that we expect two solutions ($S = \\\\{0.5, -0.5\\\\}$). The next step is then to bring `qf` into uniform superposition, followed by the Grover iterations and finalized by a measurement (which is called by `print`).\n",
+    "First we create the QuantumFloat which will contain the solution. Note that the QuantumFloat constructor creates unsigned floats by default. We determine the number of iterations according to the formula given [here](https://arxiv.org/abs/quant-ph/9909040), taking into consideration that we expect two solutions ($S = \\\\{0.5, -0.5\\\\}$). The next step is then to bring `qf` into uniform superposition, followed by the Grover iterations and finalized by a measurement (which is called by `print`). The [diffuser](/reference/Grover/diffuser.html) function applies the diffusion operator required for Grover's algorithm.\n",
     "\n",
     "## Quantum Phase Estimation\n",
     "\n",
@@ -565,13 +565,7 @@
     "\n",
     "Given is a unitary $U$ and quantum state $\\ket{\\psi}$ which is an eigenvector of $U$:\n",
     "\n",
-    "$$U \\ket{\\psi} = \\text{exp}(i 2 \\pi \\phi)\\ket{\\psi}$$\n",
-    "\n",
-    "Applying quantum phase estimation to $U$ and $\\ket{\\psi}$ returns a quantum register containing an estimate for the value of $\\phi$.\n",
-    "\n",
-    "$$\\text{QPE}_{U} \\ket{\\psi} \\ket{0} = \\ket{\\psi} \\ket{\\phi}$$\n",
-    "\n",
-    "It can be implemented within a few lines of code in Qrisp:"
+    "$$U \\ket{\\psi} = \\text{exp}(i 2 \\pi \\phi)\\ket{\\psi}$$"
    ]
   },
   {
@@ -604,7 +598,7 @@
    "source": [
     "The first step here is to create the QuantumFloat `res` which will contain the result. The first argument specifies the amount of mantissa qubits, the QuantumFloat should contain and the second argument specifies the exponent. Having $n$ mantissa qubits and and exponent of $-n$ means that this QuantumFloat can represent the values between 0 and 1 with a granularity of $2^{-n}$.\n",
     "\n",
-    "Subsequently we apply an Hadamard gate to all qubits of `res` and continue by performing controlled evaluations of $U$. This is achieved by using the `with control(res[i]):` statement. This statement enters a ControlEnvironment such that every quantum operation inside the indented code block will be controlled on the i-th qubit of `res`. We conclude the algorithm by performing an inverse quantum fourier transformation of `res`.\n",
+    "Subsequently we apply an Hadamard gate to all qubits of `res` and continue by performing controlled evaluations of $U$. This is achieved by using the `with control(res[i]):` statement. This statement enters a [ControlEnvironment](/reference/Quantum%20Environment/ControlEnvironment.html) such that every quantum operation inside the indented code block will be controlled on the i-th qubit of `res`. We conclude the algorithm by performing an inverse [quantum fourier transformation](/reference/Algorithms/QFT.html) of `res`.\n",
     "\n",
     "Note that compared to the [Qiskit implementation](https://qiskit.org/documentation/stubs/qiskit.circuit.library.PhaseEstimation.html) the Qrisp version comes with the convenience that $U$ can be given as a Python function (instead of a Circuit object) allowing for slim and elegant evaluations. Furthermore, the line `with control(res[i]):` invokes a ControlEnvironment, which can yield significant gains in performance if `qpe` is called within another ControlEnvironment (compared to the Qiskit approach of simply synthesizing the double controlled version for every participating gate).\n",
     "\n",
@@ -646,7 +640,7 @@
     "\n",
     "$$\\frac{1}{2} \\text{QPE}_{U}(\\ket{00} + \\ket{01} + \\ket{10} + \\ket{11})\\ket{0} = \\frac{1}{2} (\\ket{00}\\ket{0} + \\ket{10}\\ket{\\phi_1} + \\ket{01}\\ket{\\phi_2} +\\ket{11}\\ket{\\phi_1 + \\phi_2})$$\n",
     "\n",
-    "We verify by measuring `psi` together with `res`:"
+    "We verify by measuring `psi` together with `res` using the [multi_measurement](/reference/Core/multi_measurement.html) function:"
    ]
   },
   {
