--- a/documentation/source/general/tutorial/QAOAtutorial/MaxCut.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/MaxCut.ipynb
@@ -51,7 +51,7 @@
     "Feel free to play around with this block of code changing the graph through the number of nodes, the edges connecting them, and print the result by uncommenting ``nx.draw(G, with_labels=True)``.\n",
     "\n",
     "Next thing on our list is defining the MaxCut cost operator and the mixer. Taking a peek in the appendices section of Hadfield's paper, we see, the MaxCut phase separator we have to implement is defined as\n",
-    "$$U_P=e^{-i\\gamma_pH_P}=\\e^{-i\\gamma_p\\sum_{ij\\in E}(-Z_iZ_j)}.$$ Instead of using the `ZZ` gate, we will perform the same operation using only elementary gates."
+    "$$U_P=e^{-i\\gamma_pH_P}=e^{-i\\gamma_p\\sum_{ij\\in E}(-Z_iZ_j)}.$$ Instead of using the `ZZ` gate, we will perform the same operation using only elementary gates."
    ]
   },
   {
@@ -186,7 +186,7 @@
    "source": [
     "## MaxCut QAOA implementation\n",
     "\n",
-    "Putting focuss on the problem at hand (MaxCut if you're just scrolling through and not paying that much attention) it is reasonable to ask ourselves what will be the objective that we want to optimize. \n",
+    "Putting focus on the problem at hand (MaxCut if you're just scrolling through and not paying that much attention) it is reasonable to ask ourselves what will be the objective that we want to optimize. \n",
     "\n",
     "As the name suggests, we are looking for a cut going through as much edges as possible. It's therefore crucial to count the amount of cuts we cut through (I'll cut it out now) by checking if the nodes ``i`` and ``j`` belong to different groups. If they are, the edge $(i,j)$ is cut and added to the total."
    ]
