rm duplicate output

--- a/documentation/source/general/tutorial/Jasp.ipynb
+++ b/documentation/source/general/tutorial/Jasp.ipynb
@@ -119,16 +119,6 @@
    "id": "d28dfa54",
    "metadata": {},
    "source": [
-    "This gives the output\n",
-    "\n",
-    "```\n",
-    "{ lambda ; a:f32[3]. let\n",
-    "b:f32[3] = add a 2.0\n",
-    "c:f32[3] = sin b\n",
-    "d:f32[3] = mul b c\n",
-    "in (d,) }\n",
-    "```\n",
-    "\n",
     "Note the ``jax.numpy`` import! This module is a ``numpy`` clone that is Jax traceable. This module is particularly helpful for Jasp algorithms, since it exposes the power of numpy for classical real-time computations in the middle of a quantum algorithm.\n",
     "\n",
     "Jax not only allows us to represent (classical) computations in a more simplified and easier-to-process form but also provides a [matured ecosystem](https://www.educative.io/courses/intro-jax-deep-learning/awesome-jax-libraries) of libraries. \n",
@@ -184,19 +174,6 @@
    "id": "021a32d1",
    "metadata": {},
    "source": [
-    "```\n",
-    "{ lambda ; a:QuantumCircuit b:i64[]. let\n",
-    "    c:QuantumCircuit d:QubitArray = jasp.create_qubits a b\n",
-    "    e:Qubit = jasp.get_qubit d 0\n",
-    "    f:QuantumCircuit = jasp.h c e\n",
-    "    g:Qubit = jasp.get_qubit d 1\n",
-    "    h:QuantumCircuit = jasp.cx f e g\n",
-    "    i:QuantumCircuit j:i64[] = jasp.measure h d\n",
-    "    k:QuantumCircuit = jasp.reset i d\n",
-    "    l:QuantumCircuit = jasp.delete_qubits k d\n",
-    "  in (l, j) }\n",
-    "```\n",
-    "\n",
     "Jasp programs can be executed with the Jasp interpreter by calling them like a function"
    ]
   },
@@ -284,18 +261,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ld: warning: dylib (/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/catalyst/lib/libmlir_async_runtime.dylib) was built for newer macOS version (14.0) than being linked (13.3)\n",
-      "ld: warning: ld: warning: dylib (/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/catalyst/lib/libmlir_c_runner_utils.dylib) was built for newer macOS version (14.0) than being linked (13.3)\n",
-      "ld: warning: dylib (/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/catalyst/lib/liblapacke.3.dylib) was built for newer macOS version (14.0) than being linked (13.3)\n",
-      "ld: warning: dylib (/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/catalyst/lib/librt_capi.dylib) was built for newer macOS version (14.0) than being linked (13.3)\n",
-      "dylib (/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/catalyst/utils/libcustom_calls.so) was built for newer macOS version (14.0) than being linked (13.3)\n",
-      "ld: warning: object file (/private/var/folders/dq/dx890v3x2nv9_5n1xf3lwx2m0000gn/T/jaspr_functionro3hlkob/jaspr_function.o) was built for newer macOS version (15.0) than being linked (13.3)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -306,7 +271,7 @@
       "\n",
       "@\"{'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\" = internal constant [54 x i8] c\"{'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\\00\"\n",
       "@LightningSimulator = internal constant [19 x i8] c\"LightningSimulator\\00\"\n",
-      "@\"/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\" = internal constant [110 x i8] c\"/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\\00\"\n",
+      "@\"/Qrisp/.venv/lib/python3.11/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\" = internal constant [110 x i8] c\"/Qrisp/.venv/lib/python3.11/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\\00\"\n",
       "@__constant_1024xi64 = private constant [1024 x i64] zeroinitializer, align 64\n",
       "@__constant_30xi64 = private constant [30 x i64] [i64 30, i64 29, i64 28, i64 27, i64 26, i64 25, i64 24, i64 23, i64 22, i64 21, i64 20, i64 19, i64 18, i64 17, i64 16, i64 15, i64 14, i64 13, i64 12, i64 11, i64 10, i64 9, i64 8, i64 7, i64 6, i64 5, i64 4, i64 3, i64 2, i64 1], align 64\n",
       "\n",
@@ -333,7 +298,7 @@
       "declare ptr @_mlir_memref_to_llvm_alloc(i64)\n",
       "\n",
       "define { ptr, ptr, i64 } @jit_jaspr_function(ptr %0, ptr %1, i64 %2) {\n",
-      "  call void @__catalyst__rt__device_init(ptr @\"/Users/see/dev/Qrisp/.venv/lib/python3.11/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\", ptr @LightningSimulator, ptr @\"{'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\", i64 0, i1 true)\n",
+      "  call void @__catalyst__rt__device_init(ptr @\"/Qrisp/.venv/lib/python3.11/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\", ptr @LightningSimulator, ptr @\"{'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\", i64 0, i1 true)\n",
       "  %4 = call ptr @__catalyst__rt__qubit_allocate_array(i64 20)\n",
       "  %5 = load i64, ptr %1, align 4\n",
       "  %6 = call ptr @_mlir_memref_to_llvm_alloc(i64 8256)\n",
